<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_data_category_title">

        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_preference_water"
            android:title="@string/pref_data_water" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_preference_gas"
            android:title="@string/pref_data_gas" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_preference_pv"
            android:title="@string/pref_data_pv" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/pref_version_header">
        <Preference
            app:key="versie"
            app:title="@string/pref_version_title"
            app:summary="@string/versionName"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/pref_user_header">
        <Preference
            app:key="gebruiker"
            app:title="@string/pref_user_title"
            app:summary="userID"/>
    </PreferenceCategory>

    <!-- preference opens url in browser -->
    <PreferenceCategory app:title="@string/pref_url_category_title">
        <Preference
            android:summary="@string/pref_url_summary"
            android:title="@string/pref_url_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_url_data" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
