<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/refresh_settings"
        android:orderInCategory="100"
        android:title="@string/settings_refresh"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/title_activity_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/login_settings"
        android:orderInCategory="100"
        android:title="@string/settings_login"
        app:showAsAction="never" />
    <item android:id="@+id/logout_settings"
        android:orderInCategory="100"
        android:title="@string/settings_logout"
        app:showAsAction="never" />
</menu>